<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calinoius Physic Environment</string>
    <string name="app_name_exif">Calinoius EXIF</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_compass">Compass</string>
    <string name="action_example">Example action</string>
    <string name="action_environmentcamera">Environment Camera</string>
	<string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="researcher">Researcher</string>
    <string name="photographer">Photographer</string>
    <string name="softwareversion">Software Version</string>
    <string name="acceleration">Acceleration</string>
    <string name="gravity">Gravity</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="orientation">Orientation</string>
    <string name="magneticfield">Magnetic Field</string>
    <string name="light">Light</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="tempurature">Tempurature</string>
    <string name="notavailable">Not Available</string>
    <string name="software">Software</string>
    <string name="ms2">m/s2</string>
    <string name="unknown">Unknown</string>
    <string name="camera">Camera</string>
    <string name="aim_point">Aim point</string>
    <string name="aim_point_des">Display aim point on screen</string>
    
</resources>
