<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pureexe.calinoius.physic.environment.MainActivity" >

        
    <item
        android:id="@+id/action_environmentcamera"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_environmentcamera"/>
    <item
        android:id="@+id/action_exifread"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/app_name_exif"/>
    <item
        android:id="@+id/action_compass"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_compass"/>
    
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
